--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     background-color: gray;
 }
 
-h1{
+.h1{
     color: black;
 }
 
@@ -25,12 +25,15 @@ h1{
 
 .img{
     border-radius: 20%;
-    width: 600px;
+    width: 550px;
     height: 400px;
+    object-fit: cover;
 }
 
 .img2{
     border-radius: 10%;
-    width: 350px;
-    height: 550px;
+    max-width: 800px;
+    margin: auto;
+    height: 500px;
+    object-fit: cover;
 }
